--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "zowbei",
   "version": "1.0.0",
-  "description": "JinZhiPeng's personal project.",
-  "author": "大森 <869490494@qq.com>",
+  "description": "A Vue.js project",
+  "author": "Satan Faker <869490494@qq.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -10,9 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "swiper": "^5.0.3",
+    "swiper": "^5.0.4",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
