--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.3.1",
+    "style-loader": "^1.0.0",
     "swiper": "^5.0.4",
     "vue": "^2.5.2",
     "vue-router": "^3.1.3"
